get ids and routes refactoring

--- a/src/app/components/sport/item-sport/item-sport.component.html
+++ b/src/app/components/sport/item-sport/item-sport.component.html
@@ -5,4 +5,4 @@
 <!--    <tui-loader [inheritColor]="true"></tui-loader>-->
 <!--  }-->
 <!--</div>-->
-<!--<router-outlet></router-outlet>-->
+<router-outlet></router-outlet>
