refactoring scoreboards admin

--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.html
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.html
@@ -1,6 +1,6 @@
 @if (data) {
-  <div class="fullhd-scoreboard-container" id="fullhd-scoreboard-container">
-    <div id="fullhd-scoreboard" class="fullhd-scoreboard">
+  <div class="fullhd-scoreboard" id="fullhd-scoreboard-container">
+    <div id="fullhd-scoreboard" [class]="scoreboardDisplayClass">
       <div class="teams-container">
         <div
           class="team_a-detail"
