refactoring scoreboards admin forms score buttons

--- a/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
@@ -5,12 +5,16 @@
     class="show-hide-btn"
     type="button"
     (click)="toggleAllFormsVisibility()"
-  >{{ formsVisibility['showHideAll'] ? 'Hide' : 'Show' }} All
+  >{{ (showHideAllButtonVisible$ | async) ? 'Hide' : 'Show' }} All
   </button>
+
 
   <app-score-forms
     [data]="data"
+    [scoreInputsVisible$]="scoreInputsVisible$"
+    [scoreButtonsVisible$]="scoreButtonsVisible$"
   ></app-score-forms>
+
 
   <!--  &lt;!&ndash;SCORE INPUTS&ndash;&gt;-->
   <!--  <div-->
