refactoring scoreboards admin forms qtr buttons

--- a/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
@@ -8,174 +8,16 @@
   >{{ (showHideAllButtonVisible$ | async) ? 'Hide' : 'Show' }} All
   </button>
 
-
   <app-score-forms
     [data]="data"
     [scoreInputsVisible$]="scoreInputsVisible$"
     [scoreButtonsVisible$]="scoreButtonsVisible$"
   ></app-score-forms>
 
-
-  <!--  &lt;!&ndash;SCORE INPUTS&ndash;&gt;-->
-  <!--  <div-->
-  <!--    id="score-forms"-->
-  <!--    class="score-forms"-->
-  <!--    *ngIf="formsVisibility['scoreInputs']"-->
-  <!--  >-->
-  <!--    <form-->
-  <!--      class="score-form-a"-->
-  <!--      id="change-score-form-a"-->
-  <!--    >-->
-  <!--      <label-->
-  <!--        class="score-form_team_a_label"-->
-  <!--        for="score_team_a"-->
-  <!--      >Change Team A Score:-->
-  <!--      </label>-->
-  <!--      <input-->
-  <!--        class="score-form_team_a_input"-->
-  <!--        type="text"-->
-  <!--        id="score_team_a"-->
-  <!--        #teamAScoreInput-->
-  <!--        [placeholder]="data.match_data?.score_team_a"-->
-  <!--      >-->
-  <!--      <button-->
-  <!--        class="score-form_team_a_btn"-->
-  <!--        type="button"-->
-  <!--        (click)="updateScore('a', teamAScoreInput.value)(data.match_data!)"-->
-  <!--      >Save-->
-  <!--      </button>-->
-  <!--    </form>-->
-  <!--    <form-->
-  <!--      class="score-form-b"-->
-  <!--      id="change-score-form-b"-->
-  <!--    >-->
-  <!--      <label-->
-  <!--        class="score-form_team_b_label"-->
-  <!--        for="score_team_b"-->
-  <!--      >Change Team B Score:-->
-  <!--      </label>-->
-  <!--      <input-->
-  <!--        class="score-form_team_b_input"-->
-  <!--        type="text"-->
-  <!--        id="score_team_b"-->
-  <!--        #teamBScoreInput-->
-  <!--        [placeholder]="data.match_data?.score_team_b"-->
-  <!--      >-->
-  <!--      <button-->
-  <!--        class="score-form_team_b_btn"-->
-  <!--        type="button"-->
-  <!--        (click)="updateScore('b', teamBScoreInput.value)(data.match_data!)"-->
-  <!--      >Save-->
-  <!--      </button>-->
-  <!--    </form>-->
-  <!--  </div>-->
-  <!--  <button-->
-  <!--    id="score-form-show-hide"-->
-  <!--    class="show-hide-btn"-->
-  <!--    type="button"-->
-  <!--    (click)="toggleFormVisibility('scoreInputs')"-->
-  <!--  >{{ formsVisibility['scoreInputs'] ? 'Hide' : 'Show' }} Score Inputs-->
-  <!--  </button>-->
-
-  <!--  &lt;!&ndash;SCORE BTNS&ndash;&gt;-->
-  <!--  <div *ngIf="formsVisibility['scoreButtons']" id="score-increment-buttons" class="score-increment-buttons">-->
-  <!--    <div class="score-increment-buttons">-->
-  <!--      <button-->
-  <!--        [disabled]="isMatchDataSubmitting$ | async"-->
-  <!--        class="score-+6-a-btn"-->
-  <!--        (click)="adjustScore('a', 6)(data.match_data!)"-->
-  <!--      >+6 SCORE A-->
-  <!--      </button>-->
-  <!--      <button-->
-  <!--        [disabled]="isMatchDataSubmitting$ | async"-->
-  <!--        class="score-+3-a-btn"-->
-  <!--        (click)="adjustScore('a', 3)(data.match_data!)"-->
-  <!--      >+3 SCORE A-->
-  <!--      </button>-->
-  <!--      <button-->
-  <!--        [disabled]="isMatchDataSubmitting$ | async"-->
-  <!--        class="score&#45;&#45;1-a-btn"-->
-  <!--        (click)="adjustScore('a', -1)(data.match_data!)"-->
-  <!--      >-1 SCORE A-->
-  <!--      </button>-->
-  <!--      <button-->
-  <!--        [disabled]="isMatchDataSubmitting$ | async"-->
-  <!--        class="score-+1-a-btn"-->
-  <!--        (click)="adjustScore('a', 1)(data.match_data!)"-->
-  <!--      >+1 SCORE A-->
-  <!--      </button>-->
-  <!--    </div>-->
-  <!--    <div class="score-increment-buttons">-->
-  <!--      <button-->
-  <!--        [disabled]="isMatchDataSubmitting$ | async"-->
-  <!--        class="score-+6-b-btn"-->
-  <!--        (click)="adjustScore('b', 6)(data.match_data!)"-->
-  <!--      >+6 SCORE B-->
-  <!--      </button>-->
-  <!--      <button-->
-  <!--        [disabled]="isMatchDataSubmitting$ | async"-->
-  <!--        class="score-+3-b-btn"-->
-  <!--        (click)="adjustScore('b', 3)(data.match_data!)"-->
-  <!--      >+3 SCORE B-->
-  <!--      </button>-->
-  <!--      <button-->
-  <!--        [disabled]="isMatchDataSubmitting$ | async"-->
-  <!--        class="score&#45;&#45;1-b-btn"-->
-  <!--        (click)="adjustScore('b', -1)(data.match_data!)"-->
-  <!--      >-1 SCORE B-->
-  <!--      </button>-->
-  <!--      <button-->
-  <!--        [disabled]="isMatchDataSubmitting$ | async"-->
-  <!--        class="score-+1-b-btn"-->
-  <!--        (click)="adjustScore('b', 1)(data.match_data!)"-->
-  <!--      >+1 SCORE B-->
-  <!--      </button>-->
-  <!--    </div>-->
-  <!--  </div>-->
-  <!--  <button-->
-  <!--    id="score-increment-buttons-show-hide"-->
-  <!--    class="show-hide-btn"-->
-  <!--    type="button"-->
-  <!--    (click)="toggleFormVisibility('scoreButtons')"-->
-  <!--  > {{ formsVisibility['scoreButtons'] ? 'Hide' : 'Show' }} Score Buttons-->
-  <!--  </button>-->
-
-  <!--QTR-->
-  <div *ngIf="formsVisibility['qtrForm']" class="quarter" id="quarter">
-    <div class="quarter-selector" id="quarter-selector-form">
-      <label
-        class="quarter-selector-label"
-        for="select-quarter"
-      >Select Quarter:
-      </label>
-      <select
-        class="quarter-selector-sel"
-        id="select-quarter"
-        #quarterSelect
-      >
-        <option value="1st">1st</option>
-        <option value="2nd">2nd</option>
-        <option value="HT">HT</option>
-        <option value="3rd">3rd</option>
-        <option value="4th">4th</option>
-        <option value="Final">Final</option>
-        <option value="OT">OT</option>
-      </select>
-      <button
-        class="save-button"
-        id="save-qtr-button"
-        (click)="updateQuarter(data.match_data!, quarterSelect.value)"
-      >Save
-      </button>
-    </div>
-  </div>
-  <button
-    id="quarter-selector-show-hide"
-    class="show-hide-btn"
-    type="button"
-    (click)="toggleFormVisibility('qtrForm')"
-  >{{ formsVisibility['qtrForm'] ? 'Hide' : 'Show' }} Qtr Selector
-  </button>
+  <app-qtr-forms
+    [data]="data"
+    [qtrFormsVisible$]="qtrFormVisible$"
+  ></app-qtr-forms>
 
   <!--DOWN&DISTANCE-->
   <div *ngIf="formsVisibility['downAndDistanceForm']" id="down-and-distance" class="down-and-distance">
