refactoring scoreboards admin forms down distance buttons

--- a/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
@@ -19,133 +19,11 @@
     [qtrFormsVisible$]="qtrFormVisible$"
   ></app-qtr-forms>
 
-  <!--DOWN&DISTANCE-->
-  <div *ngIf="formsVisibility['downAndDistanceForm']" id="down-and-distance" class="down-and-distance">
-    <div class="change-down-distance-text" id="change-down-distance">
-      <div class="change-down-distance-text" id="change-down-distance-text"><label
-        class="change-down-distance-text-label" for="displayed-down-distance-text">Down &amp; Distance:</label>
-        <input
-          class="change-down-distance-text-input"
-          type="text"
-          id="displayed-down-distance-text"
-          [value]="downValue + distanceValue"
-          #downDistanceInput
-        >
-        <button
-          class="change-down-distance-text-btn"
-          id="change-down-distance-text-btn"
-          (click)="updateDownAndDistance(data.match_data!, downDistanceInput.value)"
-        >Save
-        </button>
-      </div>
-    </div>
-    <div class="down-distance-selector" id="down-selector-form">
-      <label class="down-selector-label" for="select-distance">Select Down &amp; Distance:</label>
-      <select
-        class="down-selector-distance"
-        id="select-distance"
-        (change)="distanceValue = distanceSelect.value"
-        #distanceSelect
-      >
-        <option value=" & 1">1</option>
-        <option value=" & 2">2</option>
-        <option value=" & 3">3</option>
-        <option value=" & 4">4</option>
-        <option value=" & 5">5</option>
-        <option value=" & 6">6</option>
-        <option value=" & 7">7</option>
-        <option value=" & 8">8</option>
-        <option value=" & 9">9</option>
-        <option value=" & 10" selected>10</option>
-        <option value=" & 11">11</option>
-        <option value=" & 12">12</option>
-        <option value=" & 13">13</option>
-        <option value=" & 14">14</option>
-        <option value=" & 15">15</option>
-        <option value=" & 16">16</option>
-        <option value=" & 17">17</option>
-        <option value=" & 18">18</option>
-        <option value=" & 19">19</option>
-        <option value=" & 20">20</option>
-        <option value=" & 20">20+</option>
-        <option value=" & inch">inch</option>
-        <option value=" & Goal">Goal</option>
-      </select>
-      <div class="down-selector">
-        <button
-          class="down-selector-1st-btn"
-          (click)="downValue = '1st'"
-        >1st
-        </button>
+  <app-down-distance-forms
+    [data]="data"
+    [downAndDistanceFormVisible$]="downAndDistanceFormFormVisible$"
+  ></app-down-distance-forms>
 
-        <button
-          class="down-selector-2nd-btn"
-          (click)="downValue = '2nd'"
-        >2nd
-        </button>
-
-        <button
-          class="down-selector-3rd-btn"
-          (click)="downValue = '3rd'"
-        >3rd
-        </button>
-
-        <button
-          class="down-selector-4th-btn"
-          (click)="downValue = '4th'"
-        >4th
-        </button>
-      </div>
-
-    </div>
-
-    <div class="down-dist-selector-form" id="down-dist-selector-form">
-      <label class="down-dist-selector-label">Select Play:</label>
-      <div class="down-dist-selector-game">
-        <button
-          class="first-and-ten-btn"
-          (click)="downValue = '1st'; distanceValue =' & 10'"
-        >1st &amp; 10
-        </button>
-        <button
-          class="goal-btn"
-          (click)="distanceValue =' & Goal'"
-        >Goal
-        </button>
-      </div>
-      <div class="down-dist-selector-conv">
-        <button
-          class="one-pt-btn"
-          (click)="downValue = ''; distanceValue ='1PT'"
-        >1PT
-        </button>
-        <button
-          class="two-pt-btn"
-          (click)="downValue = ''; distanceValue ='2PT'"
-        >2PT
-        </button>
-      </div>
-      <div class="down-dist-selector-kick">
-        <button
-          class="fg-btn"
-          (click)="downValue = ''; distanceValue ='FG'"
-        >FG
-        </button>
-        <button
-          class="kickoff-btn"
-          (click)="downValue = ''; distanceValue ='KickOff'"
-        >KickOff
-        </button>
-      </div>
-    </div>
-  </div>
-  <button
-    id="down-and-distance-show-hide"
-    class="show-hide-btn"
-    type="button"
-    (click)="toggleFormVisibility('downAndDistanceForm')"
-  >{{ formsVisibility['downAndDistanceForm'] ? 'Hide' : 'Show' }} Down Distance Forms
-  </button>
 
   <!--TO-->
   <div *ngIf="formsVisibility['timeoutBtns']" id="timeouts-btns" class="timeouts-btns">
